# SGEngine-Cpp

./: .gitignore  CMakeLists.txt  COMPILING  Doxyfile  Doxyfile.cmake.in  LICENSE.TXT  Readme.md  deps.pl  deps.sh  plan.org
Examples/Demo/: CMakeLists.txt
Examples/Demo/Source/: Game.cpp  Game.h  ImageManager.h  main.cpp
Examples/Demo/helloworld_data/: init.json  scene.json
Examples/Demo/helloworld_data/shader/: debug.vert  obj.vert
Examples/Demo/lighting_data/: scene.json
Examples/Demo/lighting_data/shader/: Phong.fs  Phong.vs
Examples/HelloWorld/: CMakeLists.txt
Examples/HelloWorld/Source/: Game.cpp  Game.h  main.cpp
Examples/HelloWorld/data/: colors.json  init.json  scene.json
Examples/HelloWorld/data/shader/: debug.frag  debug.vert  obj.frag  obj.fs  obj.vert
Examples/Noise/: CMakeLists.txt
Examples/Noise/Source/: Perlin.cpp
Examples/viztest/: CMakeLists.txt
Examples/viztest/Source/: Colors.cpp  Noise.cpp  Perlin.cpp
SGEngine/Sources/: CMakeLists.txt
SGEngine/Sources/Engine/: CMakeLists.txt  Engine.h
SGEngine/Sources/Engine/GL/: GLProjection.cpp  GLProjection.h  GLSL.cpp  GLSLProgram.h  GLSLShader.h
SGEngine/Sources/Engine/Image/: Image.cpp  Image.h
SGEngine/Sources/Engine/Model/: Obj.cpp  Obj.h
SGEngine/Sources/Engine/Render/: DebugGraphics.cpp  DebugGraphics.h  MeshRenderer.cpp  MeshRenderer.h
SGEngine/Sources/Engine/UI/: Console.cpp  Console.h  Input.cpp  Input.h  SGEWindow.cpp  SGEWindow.h
SGEngine/Sources/Engine/platform/sdl2/: sdl2_Input.cpp  sdl2_Window.cpp
SGEngine/Sources/Lib/: CMakeLists.txt  Lib.h
SGEngine/Sources/Lib/Bounds/: AABB.h  Circle.h  Line2D.cpp  Line2D.h  Rectangle.h
SGEngine/Sources/Lib/Geom/: Mesh.h  Vertex.h
SGEngine/Sources/Lib/Math/: Color.cpp  Color.h  FMath.h  Matrix.cpp  Matrix2.h  Matrix3.h  Matrix4.h  Quaternion.cpp  Quaternion.h  Transform.h  Vector.cpp  (+3 more)
SGEngine/Test/: CMakeLists.txt  main.cpp
Source/: CMakeLists.txt
Source/Engine/: CMakeLists.txt  Engine.h
Source/Engine/Data/: jsonfile.cpp  jsonfile.h
Source/Engine/GL/: GLProjection.cpp  GLProjection.h  GLSL.cpp  GLSLLight.h  GLSLProgram.h  GLSLShader.h
Source/Engine/Image/: Image.cpp  Image.h
Source/Engine/Model/: Obj.cpp  Obj.h
Source/Engine/Render/: DebugGraphics.cpp  DebugGraphics.h  Image.h  ImageManager.cpp  ImageManager.h  MeshRenderer.cpp  MeshRenderer.h
Source/Engine/UI/: Console.cpp  Console.h  Input.h  SGEWindow.h
Source/Engine/platform/sdl2/: sdl2_Input.cpp  sdl2_Window.cpp
Source/Lib/: CMakeLists.txt  Lib.h
Source/Lib/Bounds/: AABB.h  Circle.h  Intersection.cpp  Intersection.h  Line2D.cpp  Line2D.h  Ray3D.cpp  Ray3D.h  Rectangle.h  Sphere.h
Source/Lib/Containers/: Grid.h
Source/Lib/Geom/: Mesh.cpp  Mesh.h  Vertex.h
Source/Lib/Geom/Primitive/: Cube.h  ICOSphere.h
Source/Lib/Math/: Color.cpp  Color.h  FMath.h  Matrix.cpp  Matrix2.h  Matrix3.h  Matrix4.h  Quaternion.cpp  Quaternion.h  Transform.h  Vector.cpp  Vector2.h  Vector2i.h  Vector3.h  Vector4.h
Source/Lib/Noise/: Noise.h  Perlin.cpp  Perlin.h  Worley.cpp  Worley.h
Source/Lib/System/: Assert.cpp  Assert.h  Types.h
Source/Lib/Util/: Clock.h  LibIO.cpp  LibIO.h  Random.h  StringUtil.cpp  StringUtil.h
Source/lib/: CMakeLists.txt  lib.h
Source/lib/bounds/: aabb.h  circle.h  intersection.h  line2d.cpp  line2d.h  ray3d.cpp  ray3d.h  rect.h  sphere.h
Source/lib/geom/: Mesh.cpp  Vertex.h
Source/lib/geom/Primitive/: ICOSphere.h  Plane.h  Primitive.cpp
Source/lib/math/: color.cpp  math.h  matrix2.h  matrix3.h  matrix4.h  quaternion.cpp  quaternion.h  vector.cpp  vector2.h  vector3.h  vector4.h
Source/lib/noise/: noise.cpp  noise.h
Source/lib/sys/: assert.h  util.h
Source/lib/util/: clock.cpp  clock.h  libio.cpp  libio.h  random.h  stringutil.cpp  stringutil.h
Test/: CMakeLists.txt
Test/Lib/Bounds/: AABB_Test.cpp  Circle_Test.cpp  Intersection_Test.cpp  Line2D_Test.cpp  Rectangle_Test.cpp  Sphere_Test.cpp
Test/Lib/Geom/: Mesh_Test.cpp  Vertex_Test.cpp
Test/Lib/Math/: Color_Test.cpp  FMath_Test.cpp  Matrix2_Test.cpp  Matrix3_Test.cpp  Matrix4_Test.cpp  Transform_Test.cpp  Vector2_Test.cpp  Vector3_Test.cpp  Vector4_Test.cpp
Test/Lib/Util/: Random_Test.cpp  StringUtil_Test.cpp
sample/demo/: CMakeLists.txt
sample/demo/data/: init.json  scene.json
sample/demo/data/shader/: Emit.fs  Emit.vs  Phong.fs  Phong.vs  obj.vs
sample/demo/src/: game.cpp  game.h  imagemanager.cpp  imagemanager.h  main.cpp
sample/viztest/: CMakeLists.txt
sample/viztest/src/: colors.cpp  noise.cpp
src/: CMakeLists.txt
src/engine/: CMakeLists.txt  engine.h
src/engine/data/: jsonfile.cpp  jsonfile.h
src/engine/gl/: glprojection.cpp  glprojection.h  glsl.cpp  glsllight.h  glslprogram.h  glslshader.h
src/engine/image/: image.cpp  image.h
src/engine/model/: obj.cpp  obj.h
src/engine/platform/sdl2/: sdl2_input.cpp  sdl2_window.cpp
src/engine/render/: debuggraphics.cpp  debuggraphics.h  meshrenderer.cpp  meshrenderer.h
src/engine/ui/: console.cpp  console.h  input.h  sgewindow.h
src/lib/: CMakeLists.txt  lib.h
src/lib/bounds/: aabb.h  circle.h  intersection.h  line2d.cpp  line2d.h  ray3d.cpp  ray3d.h  rect.h  sphere.h
src/lib/container/: grid.h
src/lib/geom/: mesh.cpp  mesh.h  vertex.h
src/lib/geom/prim/: cube.h  icosphere.h  plane.h  primitive.cpp
src/lib/math/: color.h  math.h  matrix.cpp  quaternion.h  transform.h  vector.cpp  vector2.h  vector2i.h  vector3.h  vector4.h
src/lib/noise/: noise.cpp  noise.h
src/lib/sys/: assert.cpp  util.cpp
src/lib/util/: clock.h  libio.h  stringutil.cpp  stringutil.h
test/: CMakeLists.txt  main.cpp
test/Lib/Bounds/: AABB_Test.cpp  Circle_Test.cpp  Rectangle_Test.cpp  Sphere_Test.cpp
test/Lib/Geom/: Mesh_Test.cpp
test/Lib/Math/: Color_Test.cpp  Vector2_Test.cpp  Vector3_Test.cpp  Vector4_Test.cpp
test/lib/bounds/: intersection_test.cpp  line2d_test.cpp
test/lib/geom/: mesh_test.cpp  vertex_test.cpp
test/lib/math/: fmath_test.cpp  matrix3_test.cpp  matrix4_test.cpp  transform_test.cpp  vector2_test.cpp  vector3_test.cpp  vector4_test.cpp
test/lib/util/: stringutil_test.cpp
(+31 files in other folders)
